istio/05-ingress/productpage-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: eylab
spec:
  ingressClassName: nginx
  rules:
  - host: productpage.NGINX_LB_IP.nip.io
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /productpage
        pathType: Exact
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /static/
        pathType: Prefix
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /login
        pathType: Exact
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /logout
        pathType: Exact
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /api/v1/products
        pathType: Prefix
